@startuml
skinparam classAttributeIconSize 0
skinparam shadowing false

class User {
  +_id: ObjectId
  +name: String
  +email: String
  +password: String
  +role: enum(user, admin, staff)
  +avatar: String
  +isActive: Boolean
}

class Workspace {
  +_id: ObjectId
  +name: String
  +description: String
  +visibility: enum(private, public)
  +owner: ObjectId
  +members: Member[]
  +isActive: Boolean
}

class Member {
  +user: ObjectId
  +role: enum(admin, member)
  +addedAt: Date
}

class Board {
  +_id: ObjectId
  +name: String
  +description: String
  +workspace: ObjectId
  +background: String
  +createdBy: ObjectId
  +isClosed: Boolean
}

class List {
  +_id: ObjectId
  +name: String
  +board: ObjectId
  +position: Number
  +isArchived: Boolean
}

class Card {
  +_id: ObjectId
  +title: String
  +description: String
  +list: ObjectId
  +board: ObjectId
  +position: Number
  +dueDate: Date
  +isCompleted: Boolean
  +labels: String[]
  +assignees: ObjectId[]
  +checklist: ChecklistItem[]
  +comments: Comment[]
  +isArchived: Boolean
  +createdBy: ObjectId
}

class ChecklistItem {
  +_id: ObjectId
  +text: String
  +completed: Boolean
  +completedAt: Date
}

class Comment {
  +_id: ObjectId
  +user: ObjectId
  +content: String
  +createdAt: Date
}

class Activity {
  +_id: ObjectId
  +actor: ObjectId
  +action: String
  +targetType: enum(Card, List, Board, Workspace, Comment)
  +target: ObjectId
  +board: ObjectId
  +workspace: ObjectId
  +metadata: Mixed
  +createdAt: Date
}

Workspace "1" *-- "many" Member
Workspace "1" --> "many" Board
Board "1" --> "many" List
List "1" --> "many" Card
Card "1" *-- "many" ChecklistItem
Card "1" *-- "many" Comment
User "1" <-- "many" Member
User "1" <-- "many" Activity : actor
User "1" <-- "many" Comment
User "1" <-- "many" Card : assignees
Workspace "1" <-- "many" Activity
Board "1" <-- "many" Activity

@enduml
